fix color contrast

--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,13 @@
 }
 
 :root {
-  --text-color-primary: #717b90;
-  --text-color-light: #5e626b;
-  --link-color-primary: #b4bac4;
-  --border-color-primary: #1a1f29;
-  --border-color-light: #cccccc;
+  --bg-color-primary: #fff;
+  --text-color-primary: #1d1d1f;
+  --text-color-light: #6e6e73;
+  --text-color-heading: #171c8f;
+  --link-color-primary: #515154;
+  --border-color-primary: #6e6e73;
+  --border-color-light: #ccc;
   --brand-blue: #171c8f;
 }
 
@@ -139,6 +141,7 @@ fieldset legend {
   align-items: center;
   min-height: 48px;
   font-size: 14px;
+  font-weight: bold;
   text-transform: uppercase;
   padding-left: 40px;
   padding-right: 40px;
@@ -212,10 +215,13 @@ fieldset legend {
  position: absolute;
  top: -100px;
  left: 20px;
+ color: var(--link-color-primary);
+ text-decoration: underline;
 }
 
 .header__skip-link:focus {
   top: 2px;
+  color: var(--brand-blue);
 }
 
 .header__logo {
@@ -320,9 +326,8 @@ fieldset legend {
   content: "";
   display: inline-block;
   width: 2px;
-  height: 12px;
-  border-left: 1.2px #929499 solid;
-font-weight: bold;
+  height: 14px;
+  border-left: 1.2px var(--border-color-primary) solid;
   margin-left: 13px;
   margin-right: 8px;
   transform: rotate(22deg) translateY(2px);
@@ -334,19 +339,21 @@ font-weight: bold;
 
 .breadcrumbs__link {
   display: inline-block;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.3;
   color: var(--link-color-primary);
+  text-decoration: underline;
 }
 
 .breadcrumbs__link:hover {
-  text-decoration: underline;
+  color: var(--brand-blue);
 }
 
 .breadcrumbs__current {
   display: inline-block;
-  font-size: 12px;
-  color: #74767B;
+  font-size: 14px;
+  line-height: 1.3;
+  color: var(--text-color-light);
 }
 
 .footer {
@@ -447,7 +454,7 @@ font-weight: bold;
   display: inline-block;
   font-size: 16px;
   line-height: 1.4;
-  color: var(--text-color-light);
+  color: var(--link-color-primary);
   text-decoration: none;
   letter-spacing: 0.07em;
 }
@@ -458,7 +465,8 @@ font-weight: bold;
 
 .footer__heading {
   font-size: 13px;
-    line-height: 1.4;
+  font-weight: bold;
+  line-height: 1.4;
   letter-spacing: 0.08em;
   text-transform: uppercase;
   color: var(--text-color-primary);
@@ -708,11 +716,11 @@ font-weight: bold;
 
 .product-card__description a {
   color: var(--link-color-primary);
+  text-decoration: underline;
 }
 
 .product-card__description a:hover {
   color: var(--brand-blue);
-  text-decoration: underline;
 }
 
 .product-card__parameter {
@@ -733,7 +741,12 @@ font-weight: bold;
   display: block;
   margin-top: 10px;
   padding: 10px 0;
+  color: var(--link-color-primary);
   text-decoration: underline;
+}
+
+.size-guide-link:hover {
+  color: var(--brand-blue);
 }
 
 .modal {
@@ -966,7 +979,7 @@ font-weight: bold;
   font-size: 22px;
   line-height: 1.3;
   font-weight: normal;
-  color: var(--brand-blue);
+  color: var(--text-color-heading);
   margin: 0;
   letter-spacing: 0.01em;
 }
